--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "email": "rs3907367@gmail.com",
     "url": "https://github.com/Riteshsharm"
   },
-  "description": "Welcome to my full stack Next.js 14 space portfolio.",
+  "description": "Welcome to my full stack Next.js 14 space portfolio",
   "keywords": [
     "reactjs",
     "nextjs",
